[package]
name = "ilert"
version = "1.0.0"
authors = ["Christian Froehlingsdorf <chris@ilert.com>"]
edition = "2018"
description = "The official iLert api bindings."
keywords = ["ilert", "client", "alerting", "monitoring", "oncall"]
readme = "README.md"
license = "MIT"
homepage = "https://ilert.de"
documentation = "https://docs.rs/ilert"
repository = "https://github.com/iLert/ilert-rust"
categories = ["api-bindings"]

[dependencies]
reqwest = "0.9.22"
base64 = "0.12.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
