[package]
name = "ilert"
version = "3.2.0"
authors = ["Christian Froehlingsdorf <chris@ilert.com>"]
edition = "2021"
description = "The official ilert api bindings."
keywords = ["ilert", "client", "alerting", "incident-coms", "oncall"]
readme = "README.md"
license = "MIT"
homepage = "https://ilert.com"
documentation = "https://docs.rs/ilert"
repository = "https://github.com/iLert/ilert-rust"
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.10"
